correcting amplify file's output directory

--- a/amplify.yml
+++ b/amplify.yml
@@ -16,7 +16,7 @@ frontend:
         - npm run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: /
+    baseDirectory: build
     files:
       - '**/*'
   cache:
